fix: adjustment on small device

--- a/src/styles/Calendar/Calendar.css
+++ b/src/styles/Calendar/Calendar.css
@@ -194,12 +194,12 @@
     {
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 80vh;
         width: 93%;
         margin-left: 30px;
         background-color: rgba(249, 249, 250, 0.879);
-        background-color: red;
-        margin-top: 100px;
+        /* background-color: red; */
+        margin-top: 50px;
         border-radius: 10px;
     }
 }
